--- a/Verify Files – Audit Report/VerifyFilesAuditReport/BatchTasks/UI/VerifyFilesExtendedSettingsView.xaml
+++ b/Verify Files – Audit Report/VerifyFilesAuditReport/BatchTasks/UI/VerifyFilesExtendedSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CaptureQARuleState.BatchTasks.UI.VerifyFilesExtendedSettingsView"
+﻿<UserControl x:Class="VerifyFilesAuditReport.BatchTasks.UI.VerifyFilesExtendedSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
